Added Fullscreen toggle button, q. This toggles between fullscreen and windowed mode. Removed q as quit key. Fixed ESC so it will actually quit. Added VERSION constant so that the program version will be displayed in the console output and on the window titlebar. Added couts in Kinect setDepth and setMotorAngle so depth and angle values would be printed to the console. Moved function implementation of setDepth from header to cpp file.
Added INSTALL PDF with installation instructions.

--- a/fluidWall/fluidWall.vcxproj
+++ b/fluidWall/fluidWall.vcxproj
@@ -91,6 +91,14 @@
     <ClCompile Include="fluidWall.cpp" />
     <ClCompile Include="KinectController.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\configKinect.props" />
+    <None Include="..\configOpenCvDebug.props" />
+    <None Include="..\configOpenCvRelease.props" />
+    <None Include="..\configOpenGl.props" />
+    <None Include="..\LGPL.txt" />
+    <None Include="..\Release\INSTALL.pdf" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
