--- a/fluidWall/fluidWall.vcxproj.filters
+++ b/fluidWall/fluidWall.vcxproj.filters
@@ -39,4 +39,24 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\configKinect.props">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\configOpenCvDebug.props">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\configOpenCvRelease.props">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\configOpenGl.props">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\LGPL.txt">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\Release\INSTALL.pdf">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
